data/derived/comb/progs/unify/prog1195.ml.out
Characters 51-60:
  | true -> x::(clone x n-1)
                ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
